--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 # Here I can specify path to files or folder which i want to ignore and do not want to push these files on github
 Node Package Manager/node_modules/ 
+Express/node_modules
